mruby-sys/vendor/mruby/include/mruby.h


typedef uint32_t mrb_aspec;
struct mrb_irep;
struct mrb_state;
typedef void* (*mrb_allocf) (struct mrb_state *mrb, void*, size_t, void *ud);
struct mrb_context {
  struct mrb_context *prev;
  mrb_value *stack;                       
  mrb_value *stbase, *stend;
  mrb_callinfo *ci;
  mrb_callinfo *cibase, *ciend;
  uint16_t *rescue;                       
  uint16_t rsize;
  struct RProc **ensure;                  
  uint16_t esize, eidx;
  enum mrb_fiber_state status;
  mrb_bool vmexec;
  struct RFiber *fib;
};
typedef mrb_value (*mrb_func_t)(struct mrb_state *mrb, mrb_value);
struct mrb_cache_entry {
  struct RClass *c, *c0;
  mrb_sym mid;
  mrb_method_t m;
};
struct mrb_jmpbuf;
typedef void (*mrb_atexit_func)(struct mrb_state*);
typedef struct mrb_state {
  struct mrb_jmpbuf *jmp;
  mrb_allocf allocf;                      
  void *allocf_ud;                        
  struct mrb_context *c;
  struct mrb_context *root_c;
  struct iv_tbl *globals;                 
  struct RObject *exc;                    
  struct RObject *top_self;
  struct RClass *object_class;            
  struct RClass *class_class;
  struct RClass *module_class;
  struct RClass *proc_class;
  struct RClass *string_class;
  struct RClass *array_class;
  struct RClass *hash_class;
  struct RClass *range_class;
#ifndef MRB_WITHOUT_FLOAT
  struct RClass *float_class;
#endif
  struct RClass *fixnum_class;
  struct RClass *true_class;
  struct RClass *false_class;
  struct RClass *nil_class;
  struct RClass *symbol_class;
  struct RClass *kernel_module;
  mrb_gc gc;
#ifdef MRB_METHOD_CACHE
  struct mrb_cache_entry cache[MRB_METHOD_CACHE_SIZE];
#endif
  mrb_sym symidx;
  struct symbol_name *symtbl;   
  mrb_sym symhash[256];
  size_t symcapa;
#ifndef MRB_ENABLE_SYMBOLL_ALL
  char symbuf[8];               
#endif
#ifdef MRB_ENABLE_DEBUG_HOOK
  void (*code_fetch_hook)(struct mrb_state* mrb, struct mrb_irep *irep, const mrb_code *pc, mrb_value *regs);
  void (*debug_op_hook)(struct mrb_state* mrb, struct mrb_irep *irep, const mrb_code *pc, mrb_value *regs);
#endif
#ifdef MRB_BYTECODE_DECODE_OPTION
  mrb_code (*bytecode_decoder)(struct mrb_state* mrb, mrb_code code);
#endif
  struct RClass *eException_class;
  struct RClass *eStandardError_class;
  struct RObject *nomem_err;              
  struct RObject *stack_err;              
#ifdef MRB_GC_FIXED_ARENA
  struct RObject *arena_err;              
#endif
  void *ud; 
#ifdef MRB_FIXED_STATE_ATEXIT_STACK
  mrb_atexit_func atexit_stack[MRB_FIXED_STATE_ATEXIT_STACK_SIZE];
#else
  mrb_atexit_func *atexit_stack;
#endif
  uint16_t atexit_stack_len;
  uint16_t ecall_nest;                    
} mrb_state;
MRB_API struct RClass *mrb_define_class(mrb_state *mrb, const char *name, struct RClass *super);
MRB_API struct RClass *mrb_define_module(mrb_state *, const char*);
MRB_API void mrb_define_method(mrb_state *mrb, struct RClass *cla, const char *name, mrb_func_t func, mrb_aspec aspec);
MRB_API mrb_value mrb_obj_new(mrb_state *mrb, struct RClass *c, mrb_int argc, const mrb_value *argv);
MRB_API struct RClass * mrb_class_new(mrb_state *mrb, struct RClass *super);
MRB_API struct RClass * mrb_module_new(mrb_state *mrb);
MRB_API mrb_bool mrb_class_defined(mrb_state *mrb, const char *name);
MRB_API struct RClass * mrb_class_get(mrb_state *mrb, const char *name);
MRB_API struct RClass * mrb_exc_get(mrb_state *mrb, const char *name);
MRB_API mrb_bool mrb_class_defined_under(mrb_state *mrb, struct RClass *outer, const char *name);
MRB_API struct RClass * mrb_class_get_under(mrb_state *mrb, struct RClass *outer, const char *name);
MRB_API struct RClass * mrb_module_get(mrb_state *mrb, const char *name);
MRB_API struct RClass * mrb_module_get_under(mrb_state *mrb, struct RClass *outer, const char *name);
MRB_API void mrb_notimplement(mrb_state*);
MRB_API mrb_value mrb_notimplement_m(mrb_state*, mrb_value);
MRB_API mrb_value mrb_obj_dup(mrb_state *mrb, mrb_value obj);
MRB_API mrb_bool mrb_obj_respond_to(mrb_state *mrb, struct RClass* c, mrb_sym mid);
MRB_API struct RClass * mrb_define_class_under(mrb_state *mrb, struct RClass *outer, const char *name, struct RClass *super);
MRB_API struct RClass * mrb_define_module_under(mrb_state *mrb, struct RClass *outer, const char *name);
#define MRB_ARGS_NONE()     ((mrb_aspec)0)
typedef const char *mrb_args_format;
MRB_API mrb_int mrb_get_args(mrb_state *mrb, mrb_args_format format, ...);
MRB_API mrb_sym mrb_intern_str(mrb_state*,mrb_value);
#define mrb_str_new_lit(mrb, lit) mrb_str_new_static(mrb, (lit), mrb_strlen_lit(lit))
MRB_API void mrb_p(mrb_state*, mrb_value);
#define mrb_int(mrb, val) mrb_fixnum(mrb_to_int(mrb, val))