mruby-sys/src/ffi.rs

extern "C" {
    /// Creates a new instance of Class, Class.
    ///
    /// Example:
    ///
    ///      void
    ///      mrb_example_gem_init(mrb_state* mrb) {
    ///        struct RClass *example_class;
    ///
    ///        mrb_value obj;
    ///        example_class = mrb_class_new(mrb, mrb->object_class);
    ///        obj = mrb_obj_new(mrb, example_class, 0, NULL); // => #<#<Class:0x9a945b8>:0x9a94588>
    ///        mrb_p(mrb, obj); // => Kernel#p
    ///       }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] super The super class or parent.
    /// @return [struct RClass *] Reference to the new class.
    #[link_name = "\u{1}_mrb_class_new"]
    pub fn mrb_class_new(mrb: *mut mrb_state, super_: *mut RClass) -> *mut RClass;
}
extern "C" {
    /// Creates a new module, Module.
    ///
    /// Example:
    ///      void
    ///      mrb_example_gem_init(mrb_state* mrb) {
    ///        struct RClass *example_module;
    ///
    ///        example_module = mrb_module_new(mrb);
    ///      }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @return [struct RClass *] Reference to the new module.
    #[link_name = "\u{1}_mrb_module_new"]
    pub fn mrb_module_new(mrb: *mut mrb_state) -> *mut RClass;
}
extern "C" {
    /// Returns an mrb_bool. True if class was defined, and false if the class was not defined.
    ///
    /// Example:
    ///     void
    ///     mrb_example_gem_init(mrb_state* mrb) {
    ///       struct RClass *example_class;
    ///       mrb_bool cd;
    ///
    ///       example_class = mrb_define_class(mrb, "ExampleClass", mrb->object_class);
    ///       cd = mrb_class_defined(mrb, "ExampleClass");
    ///
    ///       // If mrb_class_defined returns 1 then puts "True"
    ///       // If mrb_class_defined returns 0 then puts "False"
    ///       if (cd == 1){
    ///         puts("True");
    ///       }
    ///       else {
    ///         puts("False");
    ///       }
    ///      }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name A string representing the name of the class.
    /// @return [mrb_bool] A boolean value.
    #[link_name = "\u{1}_mrb_class_defined"]
    pub fn mrb_class_defined(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> mrb_bool;
}
extern "C" {
    /// Gets a class.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name The name of the class.
    /// @return [struct RClass *] A reference to the class.
    #[link_name = "\u{1}_mrb_class_get"]
    pub fn mrb_class_get(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> *mut RClass;
}
extern "C" {
    /// Gets a exception class.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name The name of the class.
    /// @return [struct RClass *] A reference to the class.
    #[link_name = "\u{1}_mrb_exc_get"]
    pub fn mrb_exc_get(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> *mut RClass;
}
extern "C" {
    /// Returns an mrb_bool. True if inner class was defined, and false if the inner class was not defined.
    ///
    /// Example:
    ///     void
    ///     mrb_example_gem_init(mrb_state* mrb) {
    ///       struct RClass *example_outer, *example_inner;
    ///       mrb_bool cd;
    ///
    ///       example_outer = mrb_define_module(mrb, "ExampleOuter");
    ///
    ///       example_inner = mrb_define_class_under(mrb, example_outer, "ExampleInner", mrb->object_class);
    ///       cd = mrb_class_defined_under(mrb, example_outer, "ExampleInner");
    ///
    ///       // If mrb_class_defined_under returns 1 then puts "True"
    ///       // If mrb_class_defined_under returns 0 then puts "False"
    ///       if (cd == 1){
    ///         puts("True");
    ///       }
    ///       else {
    ///         puts("False");
    ///       }
    ///      }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer The name of the outer class.
    /// @param [const char *] name A string representing the name of the inner class.
    /// @return [mrb_bool] A boolean value.
    #[link_name = "\u{1}_mrb_class_defined_under"]
    pub fn mrb_class_defined_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> mrb_bool;
}
extern "C" {
    /// Gets a child class.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer The name of the parent class.
    /// @param [const char *] name The name of the class.
    /// @return [struct RClass *] A reference to the class.
    #[link_name = "\u{1}_mrb_class_get_under"]
    pub fn mrb_class_get_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> *mut RClass;
}
extern "C" {
    /// Gets a module.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name The name of the module.
    /// @return [struct RClass *] A reference to the module.
    #[link_name = "\u{1}_mrb_module_get"]
    pub fn mrb_module_get(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> *mut RClass;
}
extern "C" {
    /// Gets a module defined under another module.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer The name of the outer module.
    /// @param [const char *] name The name of the module.
    /// @return [struct RClass *] A reference to the module.
    #[link_name = "\u{1}_mrb_module_get_under"]
    pub fn mrb_module_get_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> *mut RClass;
}
extern "C" {
    #[link_name = "\u{1}_mrb_notimplement"]
    pub fn mrb_notimplement(arg1: *mut mrb_state);
}
extern "C" {
    #[link_name = "\u{1}_mrb_notimplement_m"]
    pub fn mrb_notimplement_m(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_value;
}
extern "C" {
    /// Duplicate an object.
    ///
    /// Equivalent to:
    ///   Object#dup
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [mrb_value] obj Object to be duplicate.
    /// @return [mrb_value] The newly duplicated object.
    #[link_name = "\u{1}_mrb_obj_dup"]
    pub fn mrb_obj_dup(mrb: *mut mrb_state, obj: mrb_value) -> mrb_value;
}
extern "C" {
    /// Returns true if obj responds to the given method. If the method was defined for that
    /// class it returns true, it returns false otherwise.
    ///
    ///      Example:
    ///      # Ruby style
    ///      class ExampleClass
    ///        def example_method
    ///        end
    ///      end
    ///
    ///      ExampleClass.new.respond_to?(:example_method) # => true
    ///
    ///      // C style
    ///      void
    ///      mrb_example_gem_init(mrb_state* mrb) {
    ///        struct RClass *example_class;
    ///        mrb_sym mid;
    ///        mrb_bool obj_resp;
    ///
    ///        example_class = mrb_define_class(mrb, "ExampleClass", mrb->object_class);
    ///        mrb_define_method(mrb, example_class, "example_method", exampleMethod, MRB_ARGS_NONE());
    ///        mid = mrb_intern_str(mrb, mrb_str_new_lit(mrb, "example_method" ));
    ///        obj_resp = mrb_obj_respond_to(mrb, example_class, mid); // => 1(true in Ruby world)
    ///
    ///        // If mrb_obj_respond_to returns 1 then puts "True"
    ///        // If mrb_obj_respond_to returns 0 then puts "False"
    ///        if (obj_resp == 1) {
    ///          puts("True");
    ///        }
    ///        else if (obj_resp == 0) {
    ///          puts("False");
    ///        }
    ///      }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] c A reference to a class.
    /// @param [mrb_sym] mid A symbol referencing a method id.
    /// @return [mrb_bool] A boolean value.
    #[link_name = "\u{1}_mrb_obj_respond_to"]
    pub fn mrb_obj_respond_to(mrb: *mut mrb_state, c: *mut RClass, mid: mrb_sym) -> mrb_bool;
}
extern "C" {
    /// Defines a new class under a given module
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer Reference to the module under which the new class will be defined
    /// @param [const char *] name The name of the defined class
    /// @param [struct RClass *] super The new class parent
    /// @return [struct RClass *] Reference to the newly defined class
    /// @see mrb_define_class
    #[link_name = "\u{1}_mrb_define_class_under"]
    pub fn mrb_define_class_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
        super_: *mut RClass,
    ) -> *mut RClass;
}
extern "C" {
    #[link_name = "\u{1}_mrb_define_module_under"]
    pub fn mrb_define_module_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> *mut RClass;
}
/// Format specifiers for {mrb_get_args} function
///
/// Must be a C string composed of the following format specifiers:
///
/// | char | Ruby type      | C types           | Notes                                              |
/// |:----:|----------------|-------------------|----------------------------------------------------|
/// | `o`  | {Object}       | {mrb_value}       | Could be used to retrieve any type of argument     |
/// | `C`  | {Class}/{Module} | {mrb_value}     |                                                    |
/// | `S`  | {String}       | {mrb_value}       | when `!` follows, the value may be `nil`           |
/// | `A`  | {Array}        | {mrb_value}       | when `!` follows, the value may be `nil`           |
/// | `H`  | {Hash}         | {mrb_value}       | when `!` follows, the value may be `nil`           |
/// | `s`  | {String}       | char *, {mrb_int} | Receive two arguments; `s!` gives (`NULL`,`0`) for `nil`       |
/// | `z`  | {String}       | char *            | `NULL` terminated string; `z!` gives `NULL` for `nil`           |
/// | `a`  | {Array}        | {mrb_value} *, {mrb_int} | Receive two arguments; `a!` gives (`NULL`,`0`) for `nil` |
/// | `f`  | {Float}        | {mrb_float}       |                                                    |
/// | `i`  | {Integer}      | {mrb_int}         |                                                    |
/// | `b`  | boolean        | {mrb_bool}        |                                                    |
/// | `n`  | {Symbol}       | {mrb_sym}         |                                                    |
/// | `&`  | block          | {mrb_value}       | &! raises exception if no block given.             |
/// | `*`  | rest arguments | {mrb_value} *, {mrb_int} | Receive the rest of arguments as an array; *! avoid copy of the stack.  |
/// | &vert; | optional     |                   | After this spec following specs would be optional. |
/// | `?`  | optional given | {mrb_bool}        | `TRUE` if preceding argument is given. Used to check optional argument is given. |
///
/// @see mrb_get_args
pub type mrb_args_format = *const ::std::os::raw::c_char;
extern "C" {
    /// Retrieve arguments from mrb_state.
    ///
    /// @param mrb The current MRuby state.
    /// @param format [mrb_args_format] is a list of format specifiers
    /// @param ... The passing variadic arguments must be a pointer of retrieving type.
    /// @return the number of arguments retrieved.
    /// @see mrb_args_format
    #[link_name = "\u{1}_mrb_get_args"]
    pub fn mrb_get_args(mrb: *mut mrb_state, format: mrb_args_format, ...) -> mrb_int;
}
extern "C" {
    /// Retrieve number of arguments from mrb_state.
    ///
    /// Correctly handles *splat arguments.
    #[link_name = "\u{1}_mrb_get_argc"]
    pub fn mrb_get_argc(mrb: *mut mrb_state) -> mrb_int;
}
